--- a/Application/app/src/main/res/layout/activity_main.xml
+++ b/Application/app/src/main/res/layout/activity_main.xml
@@ -3,46 +3,78 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginTop="40dp"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:textAlignment="center"
     tools:context="kaiser.myapplication.MainActivity">
 
-    <Button
-        android:id="@+id/updateButton"
+    <LinearLayout
+        android:id="@+id/ll_first"
+        android:layout_marginLeft="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_temperature"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:text="Temperature : "
+            android:textSize="24dp"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="175dp" />
+
+        <EditText
+            android:id="@+id/et_temperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:text="0.0" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_second"
+        android:layout_marginLeft="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_huminity"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:text="huminity : "
+            android:textSize="24dp" />
+
+        <EditText
+            android:id="@+id/et_huminity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:text="0%"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_third"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="update"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="368dp" />
+        android:orientation="horizontal"
+        android:textAlignment="center">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Temperature : "
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="175dp" />
+        <Button
+            android:id="@+id/btn_load"
+            android:layout_width="160dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="60dp"
+            android:text="Load" />
 
-    <EditText
-        android:id="@+id/temperature"
-        android:layout_width="95dp"
-        android:layout_height="68dp"
-        android:text="0.0"
-        tools:layout_editor_absoluteX="46dp"
-        tools:layout_editor_absoluteY="224dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="huminity : "
-        tools:layout_editor_absoluteX="236dp"
-        tools:layout_editor_absoluteY="175dp" />
-
-    <EditText
-        android:id="@+id/huminity"
-        android:layout_width="76dp"
-        android:layout_height="107dp"
-        android:text="0%"
-        tools:layout_editor_absoluteX="247dp"
-        tools:layout_editor_absoluteY="262dp" />
-
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_marginLeft="10dp"
+            android:layout_width="160dp"
+            android:layout_height="60dp"
+            android:text="Save" />
+    </LinearLayout>
 </LinearLayout>
