--- a/Application/app/src/main/res/layout/activity_main.xml
+++ b/Application/app/src/main/res/layout/activity_main.xml
@@ -40,14 +40,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/tv_huminity"
+            android:id="@+id/tv_humidity"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:text="huminity : "
             android:textSize="24dp" />
 
         <EditText
-            android:id="@+id/et_huminity"
+            android:id="@+id/et_humidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16dp"
